# sponge

./: Dockerfile  README.md  bioframe_testing.ipynb  pyproject.toml  requirements.txt  run_sponge.py  setup.py  testing.ipynb
.github/workflows/: full_test.yml  publish_package.yaml  publish_pypi.yaml  publish_testpypi.yaml  single_test.yml  test.yaml  test_full.yaml  test_single.yaml  test_sponge.yml  test_testpypi_install.yaml
.testing_v2/: test_user_config.yaml
sponge/: __init__.py  analysis.py  cli.py  config.py  config.yaml  config_manager.py  config_reader.py  data.py  data_retrieval.py  file_retrieval.py  filtering.py  functions.py  helper_functions.py  motif_functions.py  sponge.py  user_config.yaml
sponge/modules/: __init__.py
sponge/modules/analysis/: analysis.py
sponge/modules/data_retriever/: __init__.py  data_retriever.py  file_retriever.py  homology_retriever.py  motif_retriever.py  ppi_retriever.py  protein_retriever.py  region_retriever.py  tfbs_retriever.py
sponge/modules/file_writer/: file_writer.py
sponge/modules/logger/: __init__.py  logger.py
sponge/modules/match_aggregator/: match_aggregator.py
sponge/modules/match_filter/: match_filter.py
sponge/modules/motif_selector/: __init__.py  homology_retriever.py  jaspar_retriever.py  motif_selector.py  protein_retriever.py
sponge/modules/ppi_retriever/: ppi_retriever.py
sponge/modules/protein_id_mapper/: protein_id_mapper.py
sponge/modules/utils/: __init__.py  data_retrieval.py  dictionary_update.py  filtering_functions.py  match_aggregation.py  tfbs_filtering.py
sponge/modules/version_logger/: version_logger.py
spring/: spring.py  uniprot_api.py
src/sponge/: cli.py  config_manager.py  sponge.py  user_config.yaml
src/sponge/modules/analysis/: analysis.py
src/sponge/modules/data_retriever/: data_retriever.py  file_retriever.py  region_retriever.py  tfbs_retriever.py
src/sponge/modules/file_writer/: file_writer.py
src/sponge/modules/match_aggregator/: match_aggregator.py
src/sponge/modules/match_filter/: match_filter.py
src/sponge/modules/motif_selector/: homology_retriever.py  jaspar_retriever.py  motif_selector.py
src/sponge/modules/ppi_retriever/: ppi_retriever.py
src/sponge/modules/protein_id_mapper/: protein_id_mapper.py
src/sponge/modules/utils/: data_retrieval.py  dictionary_update.py  jaspar_versioning.py  motif_information.py  string_manipulation.py  tfbs_filtering.py
tests/: test_sponge.py  test_sponge_integration.py  test_sponge_unit.py
tests/sponge/: chr19_subset.bb  chr19_subset.bed  test_fixtures.py  test_motif_prior.tsv  test_motifs.py  test_ppi_prior.tsv  test_user_config.yaml
(+1 files in other folders)
