[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sponge"
authors = [
    {name = "Ladislav Hovan", email = "ladislav.hovan@ncmm.uio.no"},
]
version = "1.0.0"
description = "A package to generate prior gene regulatory networks."
readme = "README.md"
license = {text = "GPL-3"}
keywords = ["transcription-factors", "gene-regulatory-network"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "bioframe",
    "biomart",  
    "numpy",
    "pandas",
    "pyjaspar",
    "scikit-learn",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/ladislav-hovan/sponge"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]