[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "netzoopy-sponge"
authors = [
    {name = "Ladislav Hovan", email = "ladislav.hovan@ncmbm.uio.no"},
]
dynamic = ["version"]
description = "A package to generate prior gene regulatory networks."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["transcription-factors", "gene-regulatory-network"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [ 
    "bioframe>=0.8.0,<0.9",
    "numpy>=2.2.6,<3",
    "pandas>=2.3.3,<3",
    "pybbi>=0.4.2,<0.5",
    "pyjaspar>=4.0.0,<5",
    "scikit-learn>=1.7.2,<2",
    "tqdm>=4.67.1,<5",
]

[project.scripts]
netzoopy-sponge = "sponge.cli:cli"

[project.urls]
Repository = "https://github.com/kuijjerlab/sponge"

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests",
    "network: marks tests that require internet connection",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
sponge = "netzoopy-sponge"

[tool.pixi.dependencies]
python = ">=3.10.0"

[tool.pixi.pypi-dependencies]
netzoopy-sponge = { path = ".", editable = true }

[tool.pixi.feature.sponge-dev.dependencies]
pytest = ">=8.4.0"

[tool.pixi.feature.sponge-dev.tasks]
test = "pytest -m 'not slow'"

[tool.pixi.environments]
sponge-dev = ["sponge-dev"]
